@@ -12,6 +12,7 @@
 - "social activity" posts can now be previewed just like normal pages can
 - Rewrote RCData classes to inherit from an abstract class, and moved them all into a folder
 - Added some missing translation support for symbols
+- [Bug] Comment timestamp links (when in grouped mode) now correctly link / update once page name is fetched via API
 
 
 == 2.16 - 21 August 2021 ==
